# RobotControl

./: CMakeLists.txt  main.cpp
include/: BicycleModel.h  DiffDriveModel.h  PID.h  draw.h  lqr_controller.h  mpc_controller.h  pid_controller.h
params/: PID_conf.yaml
src/: LQR_Control.cpp  MPC_Control.cpp  PID_Control.cpp
